--- a/Drug management system.csproj
+++ b/Drug management system.csproj
@@ -14,7 +14,7 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -47,31 +47,58 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccess.cs" />
-    <Compile Include="Frm_Admin.cs">
+    <Compile Include="Frm_Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_Admin.Designer.cs">
-      <DependentUpon>Frm_Admin.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Frm_Login.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Frm_Login.Designer.cs">
-      <DependentUpon>Frm_Login.cs</DependentUpon>
+    <Compile Include="Frm_Main.Designer.cs">
+      <DependentUpon>Frm_Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UC_Drugs.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC_Drugs.Designer.cs">
+      <DependentUpon>UC_Drugs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UC_Login.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC_Login.Designer.cs">
+      <DependentUpon>UC_Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UC_Prescription.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC_Prescription.Designer.cs">
+      <DependentUpon>UC_Prescription.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UC_Reserve.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC_Reserve.Designer.cs">
+      <DependentUpon>UC_Reserve.cs</DependentUpon>
+    </Compile>
     <Compile Include="UC_Supplier.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UC_Supplier.Designer.cs">
       <DependentUpon>UC_Supplier.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Frm_Admin.resx">
-      <DependentUpon>Frm_Admin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Frm_Login.resx">
-      <DependentUpon>Frm_Login.cs</DependentUpon>
+    <Compile Include="UC_Workers.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC_Workers.Designer.cs">
+      <DependentUpon>UC_Workers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UC_Customer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC_Customer.Designer.cs">
+      <DependentUpon>UC_Customer.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Frm_Main.resx">
+      <DependentUpon>Frm_Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -82,8 +109,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UC_Customer.resx">
+      <DependentUpon>UC_Customer.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UC_Supplier.resx">
       <DependentUpon>UC_Supplier.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UC_Workers.resx">
+      <DependentUpon>UC_Workers.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -98,5 +131,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
