--- a/Drug management system.csproj
+++ b/Drug management system.csproj
@@ -112,6 +112,9 @@
     <EmbeddedResource Include="UC_Customer.resx">
       <DependentUpon>UC_Customer.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UC_Drugs.resx">
+      <DependentUpon>UC_Drugs.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UC_Supplier.resx">
       <DependentUpon>UC_Supplier.cs</DependentUpon>
     </EmbeddedResource>
