--- a/Drug management system.csproj
+++ b/Drug management system.csproj
@@ -33,8 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
+    <Reference Include="SunnyUI">
+      <HintPath>I:\QQfile\SunnyUI\Bin\net40\SunnyUI.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,10 +50,19 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="bean\Drugs.cs" />
+    <Compile Include="bean\Drug.cs" />
     <Compile Include="DataAccess.cs" />
+    <Compile Include="Frm_Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Login.Designer.cs">
+      <DependentUpon>Frm_Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,29 +71,26 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuperButton.xaml.cs">
+      <DependentUpon>SuperButton.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UC_AddPrescription.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UC_AddPrescription.Designer.cs">
+      <DependentUpon>UC_AddPrescription.cs</DependentUpon>
+    </Compile>
     <Compile Include="UC_Drugs.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UC_Drugs.Designer.cs">
       <DependentUpon>UC_Drugs.cs</DependentUpon>
     </Compile>
-    <Compile Include="UC_Login.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC_Login.Designer.cs">
-      <DependentUpon>UC_Login.cs</DependentUpon>
-    </Compile>
     <Compile Include="UC_Prescription.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UC_Prescription.Designer.cs">
       <DependentUpon>UC_Prescription.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UC_Reserve.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC_Reserve.Designer.cs">
-      <DependentUpon>UC_Reserve.cs</DependentUpon>
     </Compile>
     <Compile Include="UC_Supplier.cs">
       <SubType>UserControl</SubType>
@@ -92,12 +104,9 @@
     <Compile Include="UC_Workers.Designer.cs">
       <DependentUpon>UC_Workers.cs</DependentUpon>
     </Compile>
-    <Compile Include="UC_Customer.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UC_Customer.Designer.cs">
-      <DependentUpon>UC_Customer.cs</DependentUpon>
-    </Compile>
+    <EmbeddedResource Include="Frm_Login.resx">
+      <DependentUpon>Frm_Login.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_Main.resx">
       <DependentUpon>Frm_Main.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,8 +119,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="UC_Customer.resx">
-      <DependentUpon>UC_Customer.cs</DependentUpon>
+    <EmbeddedResource Include="UC_AddPrescription.resx">
+      <DependentUpon>UC_AddPrescription.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UC_Drugs.resx">
       <DependentUpon>UC_Drugs.cs</DependentUpon>
@@ -138,6 +147,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Page Include="SuperButton.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
